--- a/tamale.ipynb
+++ b/tamale.ipynb
@@ -259,7 +259,8 @@
    "source": [
     "# Acquiring landsat data for Tamale\n",
     "Data can be downloaded at from https://earthexplorer.usgs.gov, slecting the area of interest, in the search criteria can be also useful to set 'cloud cover' to the minimum.\n",
-    "then we select the following datasets: Landsat >> Landsat Collection 2 Level-2 >> Landsat 8-9 OLI/TIRS C2 L2, then we download all the files in Level-2 Surface Reflectance Bands\n",
+    "then we select the following datasets: Landsat >> Landsat Collection 2 Level-2 >> Landsat 8-9 OLI/TIRS C2 L2, then we download all the files in Level-2 Surface Reflectance Bands.\n",
+    "These files have to be saved in a repository named 'tamale_landsat' and the TIF file for the i-th bandwidth  has to be named SR_B{i}.TIF (e.g. SR_B1.TIF)\n",
     "\n",
     "These files contain files .TIF regarding the reflectance of the surface for 7 different bandwidth, detailed informations are found in https://developers.google.com/earth-engine/datasets/catalog/LANDSAT_LC08_C02_T1_L2.\n",
     "\n",
