--- a/unet.ipynb
+++ b/unet.ipynb
@@ -21,8 +21,11 @@
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
-    "from torch.utils.data import Dataset, DataLoader\n",
+    "from torch.utils.data import Dataset, DataLoader, Subset\n",
     "from torchvision import transforms\n",
+    "\n",
+    "# Sklearn\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# Matplotlib\n",
     "import matplotlib.pyplot as plt"
@@ -51,7 +54,7 @@
    "outputs": [],
    "source": [
     "# Landsat data directory and file name prefix\n",
-    "tif_files_dir = 'data/tamale_landsat/'\n",
+    "landsat_directory = 'data/tamale_landsat/'\n",
     "tif_files_name_prefix = 'LC09_L2SP_194053_20231024_20231025_02_T1_SR_'"
    ]
   },
@@ -94,8 +97,8 @@
    "source": [
     "# Process each of the landsat images\n",
     "for i in range(1, 7):\n",
-    "    landsat_image_path = tif_files_dir + tif_files_name_prefix + 'B{}.TIF'.format(i)\n",
-    "    output_path = tif_files_dir + tif_files_name_prefix + 'B{}_reprojected.TIF'.format(i)\n",
+    "    landsat_image_path = landsat_directory + tif_files_name_prefix + 'B{}.TIF'.format(i)\n",
+    "    output_path = landsat_directory + tif_files_name_prefix + 'B{}_reprojected.TIF'.format(i)\n",
     "    reproject_landsat_image(landsat_image_path, output_path)"
    ]
   },
@@ -107,14 +110,22 @@
    "source": [
     "# TODO: Create the dataset\n",
     "class SatelliteRoadDataset(Dataset):\n",
-    "    def __init__(self):\n",
-    "        raise NotImplementedError\n",
+    "    def __init__(self, roads_data, landsat_directory, patch_size, transform=None):\n",
+    "        self.roads_data = roads_data\n",
+    "        self.tif_files_dir = landsat_directory\n",
+    "        self.patch_size = patch_size\n",
+    "        self.transform = transform\n",
+    "\n",
+    "        # TODO: transform the images\n",
     "\n",
     "    def __len__(self):\n",
     "        raise NotImplementedError\n",
     "\n",
     "    def __getitem__(self, index):\n",
-    "        raise NotImplementedError"
+    "        raise NotImplementedError\n",
+    "    \n",
+    "    def normalize(self, band):\n",
+    "        return (band - np.min(band)) / (np.max(band) - np.min(band))"
    ]
   },
   {
@@ -241,6 +252,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Parameters\n",
+    "epochs = 10\n",
+    "optimizer_kwargs = {\n",
+    "    'lr': 1e-4,\n",
+    "    'weight_decay': 1e-4\n",
+    "}\n",
+    "\n",
     "# Load the model\n",
     "model = UNet()\n",
     "\n",
@@ -253,18 +271,35 @@
     "    device = torch.device('cpu');\n",
     "model.to(device)\n",
     "\n",
-    "# TODO: create the training and validation data loaders\n",
-    "train_dataloader = None\n",
-    "val_dataloader = None\n",
+    "# Create the dataset\n",
+    "dataset = SatelliteRoadDataset(roads_data, landsat_directory, patch_size=256)\n",
+    "\n",
+    "# Splitting dataset into training and validation sets\n",
+    "train_indices, val_indices = train_test_split(list(range(len(dataset))), test_size=0.2, random_state=42)\n",
+    "train_dataset = Subset(dataset, train_indices)\n",
+    "val_dataset = Subset(dataset, val_indices)\n",
+    "\n",
+    "train_dataloader = DataLoader(train_dataset, batch_size=4, shuffle=True, num_workers=4)\n",
+    "val_dataloader = DataLoader(val_dataset, batch_size=4, shuffle=False, num_workers=4)\n",
     "\n",
     "# Loss function (binary cross entropy)\n",
     "loss_fn = nn.BCEWithLogitsLoss()\n",
     "\n",
     "# Optimizer (Adam)\n",
-    "optimizer = optim.Adam(model.parameters(), lr=1e-4)\n",
+    "optimizer = optim.Adam(model.parameters(), **optimizer_kwargs)\n",
     "\n",
+    "# Add learning rate scheduler\n",
+    "# not implemented for now but might be useful later"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Training\n",
-    "def train(dataloader, model, loss_fn, optimizer, device):\n",
+    "def train(dataloader, model, loss_fn, optimizer):\n",
     "    model.train() \n",
     "    total_loss = 0\n",
     "    for X, y in dataloader:\n",
@@ -281,17 +316,17 @@
     "    return avg_loss\n",
     "\n",
     "# Validation\n",
+    "@torch.no_grad()\n",
     "def validate(dataloader, model, loss_fn):\n",
     "    model.eval()\n",
     "    total_loss = 0\n",
-    "    with torch.no_grad():\n",
-    "        for X, y in dataloader:\n",
-    "            X, y = X.to(device), y.to(device)\n",
-    "            pred = model(X)\n",
-    "            loss = loss_fn(pred, y)\n",
-    "            total_loss += loss.item()\n",
+    "    for X, y in dataloader:\n",
+    "        X, y = X.to(device), y.to(device)\n",
+    "        pred = model(X)\n",
+    "        loss = loss_fn(pred, y)\n",
+    "        total_loss += loss.item()\n",
     "    avg_loss = total_loss / len(dataloader)\n",
-    "    return avg_loss\n"
+    "    return avg_loss"
    ]
   },
   {
@@ -300,8 +335,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "epochs = 10\n",
-    "\n",
     "# Training and validation Loop\n",
     "best_loss = float('inf')\n",
     "for t in range(epochs):\n",
