--- a/unet.ipynb
+++ b/unet.ipynb
@@ -632,7 +632,10 @@
     "        # Convert predictions and ground truth to binary values\n",
     "        predictions = (pred > threshold).float().cpu().numpy()\n",
     "        ground_truth = y.cpu().numpy()\n",
-    "\n",
+    "        \n",
+    "        # I had to do flatten on colab to make it work\n",
+    "        predictions = predictions.flatten()\n",
+    "        ground_truth = ground_truth.flatten()\n",
     "        all_predictions.append(predictions)\n",
     "        all_ground_truth.append(ground_truth)\n",
     "\n",
@@ -678,9 +681,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
